# gnome-breakout

./: AUTHORS  BUGS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  configure  configure.in  gnome-breakout.desktop  gnome-breakout.spec.in  mkinstalldirs
levels/: Makefile.am  Makefile.in  alcaron.gbl  mdutour.gbl  mmack.gbl
pixmaps/: Makefile.am  Makefile.in
po/: .pot  ChangeLog  POTFILES.in  de.gmo  de.po  ru.gmo  ru.po  sv.gmo  sv.po  tr.gmo  tr.po
src/: ChangeLog  Makefile.am  Makefile.in  anim.c  anim.h  animloc.h  ball.c  ball.h  bat.c  bat.h  block.c  block.h  breakout.h  collision.c  collision.h  flags.c  flags.h  game.c  game.h  gnome-breakout.c  gui-callbacks.c  gui-callbacks.h  gui-preferences.c  gui-preferences.h  gui.c  gui.h  leveldata.c  leveldata.h  powerup.c  powerup.h  util.c  util.h
