EXTRA_DIST = ball.default.0.png bat.default.0.png block.default.0.png \
	block.default.die.0.png block.default.die.1.png \
	block.default.die.2.png block.default.die.3.png \
	block.default.die.4.png block.default.die.5.png \
	block.default.die.6.png block.default.die.7.png \
	block.default.die.8.png block.default.die.9.png \
	block.default.die.10.png block.default.die.11.png \
	block.default.die.12.png block.default.die.13.png \
	block.invincible.0.png powerup.score500.0.png \
	title.png block.strong.1.0.png block.strong.2.0.png \
	block.strong.3.0.png block.strong.1.die.0.png \
	block.strong.1.die.1.png block.strong.1.die.2.png \
	block.strong.1.die.3.png block.strong.1.die.4.png \
	block.strong.1.die.5.png block.strong.1.die.6.png \
	block.strong.2.die.0.png \
	block.strong.2.die.1.png block.strong.2.die.2.png \
	block.strong.2.die.3.png block.strong.2.die.4.png \
	block.strong.2.die.5.png block.strong.2.die.6.png \
	block.strong.3.die.0.png \
	block.strong.3.die.1.png block.strong.3.die.2.png \
	block.strong.3.die.3.png block.strong.3.die.4.png \
	block.strong.3.die.5.png block.strong.3.die.6.png \
	block.explode.0.png block.explode.die.0.png \
	block.explode.die.1.png block.explode.die.2.png \
	block.explode.die.3.png block.explode.die.4.png \
	block.explode.die.5.png block.explode.die.6.png \
	block.explode.die.7.png \
	bat.laser.0.png laser.0.png powerup.laser.0.png \
	powerup.newlife.0.png powerup.newball.0.png \
	powerup.nextlevel.0.png powerup.slow.0.png \
	powerup.widebat.0.png bat.wide.0.png


pixmapdir = $(datadir)/gnome-breakout/pixmaps

pixmap_DATA = ball.default.0.png bat.default.0.png block.default.0.png \
	block.default.die.0.png block.default.die.1.png \
	block.default.die.2.png block.default.die.3.png \
	block.default.die.4.png block.default.die.5.png \
	block.default.die.6.png block.default.die.7.png \
	block.default.die.8.png block.default.die.9.png \
	block.default.die.10.png block.default.die.11.png \
	block.default.die.12.png block.default.die.13.png \
	block.invincible.0.png powerup.score500.0.png \
	title.png block.strong.1.0.png block.strong.2.0.png \
	block.strong.3.0.png block.strong.1.die.0.png \
	block.strong.1.die.1.png block.strong.1.die.2.png \
	block.strong.1.die.3.png block.strong.1.die.4.png \
	block.strong.1.die.5.png block.strong.1.die.6.png \
	block.strong.3.die.0.png block.strong.2.die.0.png \
	block.strong.2.die.0.png \
	block.strong.2.die.1.png block.strong.2.die.2.png \
	block.strong.2.die.3.png block.strong.2.die.4.png \
	block.strong.2.die.5.png block.strong.2.die.6.png \
	block.strong.3.die.0.png \
	block.strong.3.die.1.png block.strong.3.die.2.png \
	block.strong.3.die.3.png block.strong.3.die.4.png \
	block.strong.3.die.5.png block.strong.3.die.6.png \
	block.explode.0.png block.explode.die.0.png \
	block.explode.die.1.png block.explode.die.2.png \
	block.explode.die.3.png block.explode.die.4.png \
	block.explode.die.5.png block.explode.die.6.png \
	block.explode.die.7.png \
	bat.laser.0.png laser.0.png powerup.laser.0.png \
	bat.laser.0.png laser.0.png powerup.laser.0.png \
	bat.laser.0.png laser.0.png powerup.laser.0.png \
	powerup.newlife.0.png powerup.newball.0.png \
	powerup.nextlevel.0.png powerup.slow.0.png \
	powerup.widebat.0.png bat.wide.0.png
